# dotfiles

./: .editorconfig  .gitignore  LICENSE  README.md  bootstrap.sh  inventory.example.yml  inventory.yml  justfile  main.yml  mouseless_dev.yml  pkgList  pyproject.toml  renovate.json  requirements.txt  vault-bitwarden-client.sh
@Backup/etc/: rsnapshot.conf
_backup/: backup-preexec.sh  rsnapshot-daily
_preseed/: README.md  debian11_enc_mouseless_dev.cfg  debian11_enc_swap16_mouseless_dev.cfg
backup/: backup-preexec.sh  rsnapshot-daily.sh  rsnapshot-monthly  rsnapshot-weekly
bash/: .bash_aliases  .bash_profile  .bashrc
bash/_inc/: aliases.bash  exports.bash  functions.bash  path.bash  prompt.bash
compton/.config/: compton.conf
git/.config/git/: config
host_vars/: DEMV000616.yaml  fkoehler-nb.yaml  lumpi.yaml
i3/.config/i3/: config  launch-greenclip.sh  lock.sh
polybar/.config/polybar/: config  launch-polybar.sh
pre_tasks/: detect_bitwarden.yml
preseed/: README.md  debian11_enc_mouseless_dev.cfg
rofi/.config/rofi/: drun_conf
roles/bitwarden/defaults/: main.yml
roles/bitwarden/files/: com.bitwarden.desktop.desktop
roles/bitwarden/tasks/: main.yml
roles/demv/: README.md
roles/demv/files/: gitconfig  ssh_config.conf
roles/demv/tasks/: main.yml
roles/doas/tasks/: main.yml
roles/essentials/: README.md
roles/fish/: README.md
roles/kitty/: README.md
roles/ssh/: README.md
shell/: .inputrc  .profile
stow/: .stow-global-ignore  .stowrc  README.md
system/: README.md
urxvt/: .Xresource-urxvt
vim/: .vimrc
vim/.vim/: plugins.vim
(+65 files in other folders)
