[project]
name = "dotfiles"
version = "0.1.0"
license.file = "LICENSE"
description = "flokoe dotfiles"

requires-python = "==3.12.*"

dependencies = [
    "ansible==10.5.0",
    "ansible-core==2.17.5",
    "cffi==1.17.1",
    "cryptography==43.0.3",
    "Jinja2==3.1.4",
    "MarkupSafe==3.0.2",
    "packaging==24.1",
    "pycparser==2.22",
    "PyYAML==6.0.2",
    "resolvelib==1.0.1",
]

[[project.authors]]
name = "Florian Köhler"
email = "git@flokoe.de"
